--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,2 @@
-[package]
-name = "the-rust-programming-language"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
+[workspace]
+members = ["hello", "hello_world"]
